# course_work_7

./: .env.sample  .gitignore  README.md  docker-compose.yaml  pyproject.toml
api/: urls.py  views.py
config/: settings.py  urls.py
habits/: models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_alter_habit_activity.py  0003_alter_habit_periodicity.py  0004_habit_notification_time_habit_telegram_chat_id.py  0005_remove_habit_telegram_chat_id_and_more.py
users/: models.py  serializers.py  urls.py  views.py
users/management/commands/: add_user_to_group.py  create_group.py  csu.py  fill.py  remove_user.py
users/migrations/: 0001_initial.py  0002_remove_user_verification_code_user_telegram_chat_id.py
