[tool.poetry]
name = "course-work-7"
version = "0.1.0"
description = ""
authors = ["Oleg Usachev <usaechv97@mail.ru>"]
readme = "README.md"
packages = [{include = "course_work_7"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.10"
pillow = "^10.2.0"
djangorestframework = "^3.14.0"
python-dotenv = "^1.0.1"
djangorestframework-simplejwt = "^5.3.1"
drf-yasg = "^1.21.7"
django-cors-headers = "^4.3.1"
stripe = "^8.5.0"
requests = "^2.31.0"
celery = "^5.3.6"
redis = "^5.0.2"
django-celery-beat = "^2.5.0"
django-filter = "^23.5"
python-telegram-bot = "^21.0.1"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
coverage = "^7.4.3"
freezegun = "^1.4.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
